--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <body>
-    <!-- <div id="menu"></div> --->
+
 
     <header id="top">
 
@@ -62,9 +62,9 @@
         <article class="first-article clearfix" id="uxdesign">
 
             <h1> design </h1>
-            <h2> Thinking </h2>
+            <h2> thinking </h2>
             <h3> ui </h3>
-            <h4> UX </h4>
+            <h4> ux </h4>
 
 
             <div class="quadrado-imagem">
@@ -165,7 +165,7 @@
             </div>
 
 
-            <p> Crio soluções visuais para outdoors, revistas, panfletos, livros e embalagem.
+            <p> Crio soluções visuais para outdoors, revistas, panfletos, livros e embalagens.
                 Aplico as melhores práticas de design nos projetos e possuo conhecimento em 
                 processos gráficos que evitarão futuras dores de cabeça.
 
@@ -193,7 +193,7 @@
 
 
             <p> Sou grande entusiasta do design como um todo. Aprimoro frequentemente minhas habilidadees
-                com ilustração e tipografia para criar soluções mais marcantes para meus clientes.
+                em ilustração e tipografia para criar soluções mais marcantes para meus clientes.
             </p>
 
             <button class="button type1"> <a href="study_page.html">Ver Mais</a></button>
@@ -220,13 +220,13 @@
                 Trabalho com design desde 2011. Procuro cocriar com os usuários em todos os projetos, tento dar as 
                 marcas a cara que procuram. Bebo de fontes variadas, minha inspiração vem não só do digital, mas das 
                 páginas de livros e constante comunicação com as pessoas. Trabalho com <b>Photoshop, Illustrator, 
-                Adobe XD, After Effects e Corel Draw</b>. Possuo conhecimetno nas linguagens <b>HTML e CSS.</b></p>
+                Adobe XD, After Effects e Corel Draw</b>. Possuo conhecimento em <b>HTML e CSS.</b></p>
 
             <div class="icons-container">
 
                 <a target="blank" href="https://github.com/Vitorholtz"><i class="fab fa-github"></i></a>
                 <a target="blank" href="https://twitter.com/VitorHoltz"><i class="fab fa-twitter"></i></a>
-                <a target="blank" href="https://www.instagram.com/vitorholtz/"><i class="fab fa-instagram"></i></a>
+                <a target="blank" href="https://www.instagram.com/vitorholtz"><i class="fab fa-instagram"></i></a>
 
             </div>
 
