--- a/press_page.html
+++ b/press_page.html
@@ -87,10 +87,9 @@
 
     <div class="icons-container">
 
-      <a target="blank" href="http://google.com"><i class="fab fa-github"></i></a>
-      <a target="blank" href="http://google.com"><i class="fab fa-twitter"></i></a>
-      <a target="blank" href="http://google.com"><i class="fab fa-linkedin-in"></i></a>
-      <a target="blank" href="http://google.com"><i class="fab fa-instagram"></i></a>
+      <a target="blank" href="https://github.com/Vitorholtz"><i class="fab fa-github"></i></a>
+      <a target="blank" href="https://twitter.com/VitorHoltz"><i class="fab fa-twitter"></i></a>
+      <a target="blank" href="https://www.instagram.com/vitorholtz"><i class="fab fa-instagram"></i></a>
 
   </div>
 
