--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 
             <p> Crio logos e identidades visuais fortes que refletem a linguagem das empresas, produtos ou serviços.
-                Mergulho de cabeça no universo dos meus clientes para cirar a melhor assinatura e identidade possível.
+                Mergulho de cabeça no universo dos meus clientes para criar a melhor assinatura e identidade possível.
                 
             </p>
 
@@ -139,7 +139,7 @@
             </div>
 
 
-            <p> Crio posts profissionais para empresas que querem aumentar a fidelização engajamento nas suas mídias sociais.
+            <p> Crio posts profissionais para empresas que querem aumentar a fidelização e engajamento nas suas mídias sociais.
                 Uso linguagens e referências que fazem parte do universo do público.
 
             </p>
@@ -194,7 +194,7 @@
 
 
             <p> Sou grande entusiasta do design como um todo. Aprimoro frequentemente minhas habilidadees
-                em ilustração e tipografia para criar soluções mais marcantes para meus clientes.
+                com ilustração e tipografia para criar soluções marcantes para meus clientes.
             </p>
 
             <button class="button type1"> <a href="study_page.html">Ver Mais</a></button>
