--- a/Branding_page.html
+++ b/Branding_page.html
@@ -252,8 +252,8 @@
             <h2>Oceano</h2>
             <h3>Mindfulness</h3>
         
-            <p>Muitos precisam de uma pausa em toda essa correria, diria que nós todos precisamos. O centro de 
-              meditação oceano traz em sua marca o refúgio dos elementos água, terra, fogo e ar, ligando o humano 
+            <p>Muitos precisam de uma pausa em toda essa correria, diria que nós todos precisamos. O Centro de 
+              Meditação Oceano traz em sua marca o refúgio dos elementos água, terra, fogo e ar, ligando o humano 
               as suas raízes e projetando um símbolo de esperança e paz.</p>
           </div>
         
