--- a/Ux_page.html
+++ b/Ux_page.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pt-br">
     <head> 
-        <title> Estrutura base </title>
+        <title> Log-book </title>
         <meta charset="utf-8">
         <meta name="author" content="Vitor">
         <meta name="description" content="Portal do aluno">
