--- a/study_page.html
+++ b/study_page.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Estudos</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="digital_style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/804d37bdbe.js" crossorigin="anonymous"></script>
-    <title>Document</title>
 </head>
 <body>
 
