--- a/Ux_page.html
+++ b/Ux_page.html
@@ -75,7 +75,7 @@
                    
                    <h1> Visão Geral </h1>
                    <p> Log-book é uma ferramenta criada para professores e a alunos particulares de inglês 
-                     para registro de atividades e avaliação. </p>
+                     para registro de atividades e criação de portfólio. </p>
                    
                    <h1> Problema </h1>
                    <p>Aulas de inglês podem ser frustrantes, em muitos casos pela falta da percepção do 
