--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <div class="sites" id="websites">
             <h1> Websites </h1>
             <div class="thumbs">
+            <a href="http://vitorholtz.github.io/BlueLottus/" target="blank"> <img src="imagens/site05.jpg"> </a>
             <a href="http://vitorholtz.github.io/Delacumbre/" target="blank"> <img src="imagens/site01.jpg"> </a>
             <a href="https://vitorholtz.github.io/Gonzalito/" target="blank"> <img src="imagens/site02.jpg"> </a>
             <a href="https://vitorholtz.github.io/logbook/" target="blank"> <img src="imagens/site03.jpg"> </a>
